# spindle

./: .env.example  .gitignore  CLAUDE.md  README.md  landing.html  logo.html  main.py  pitch-deck.html  pitch.md  prompt.md  pyproject.toml  start_backend.sh  start_frontend.sh
agents/: architecture.md
agents/implemented/: 2026-04-24-saas-light-theme.md  add-csv-doc-xls-support.md  architecture-docs-update.md  architecture-full-rewrite.md  centralise-config.md  change-feed-component.md  chat-contradiction-callouts.md  chat-reset-button.md  contradiction-reasoning-and-false-positives.md  csv-row-splitting.md  document-panel-report-dates.md  entity-timeline-endpoint.md  fix-chat-entity-retrieval.md  fix-empty-extraction-values-and-tooltips.md  fix-empty-taxonomy-values-and-insights.md  fix-entity-resolution-and-contradiction-grouping.md  fix-list-type-contradictions.md  fix-pipeline-progress-counter.md  fix-temporal-updates-noise.md  fix-upload-race-condition.md  full-implementation.md  insights-dashboard-component.md  insights-endpoint.md  investor-report-intelligence-reframe.md  landing-page-saas-redesign.md  landing-page.md  notification-system.md  plan-investor-report-intelligence-reframe.md  rebrand-to-spindle.md  start-local-script.md  step1-report-date-extraction.md  task6-frontend.md  taxonomy-templates.md  (+5 more)
backend/: config.py  database.py  models.py
frontend/: index.html  mockup-saas-theme.html  package-lock.json  package.json  tailwind.config.js
scripts/: test_pipeline_single.py
tests/: test_api.py  test_chat.py  test_ingestion.py  test_pipeline.py
(+49 files in other folders)
