[project]
name = "taxonomy2"
version = "0.1.0"
description = "Taxonomy Discovery & Entity Resolution Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "litellm",
    "pymupdf",
    "python-docx",
    "openpyxl",
    "numpy",
    "python-multipart",
    "pydantic",
]
